--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             
             render(){
                 return(                                                                                
-                    <div>                        
+                    <div style={{textAlign: "center"}}>                        
                         <header style={{backgroundColor: "red"}}>
                             <h1 style={{textAlign: "center", color: "white"}}>Task Tracker</h1>
                         </header>
