--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                         </header>
                         
                         <div className="inputting">
-                            <form action="http://localhost:3000/taskAdded" method="POST">
+                            <form action="https://kaveeshkhattar.github.io/taskAdded" method="POST">
                                 <input style={{ marginRight: "8px", height: "30px" }} type="text" name='task' placeholder="Enter task" />
                                 <input style={{ marginRight: "8px", height: "30px" }} type="text" name='dueday' placeholder="Enter Due Day" />
                                 <button style={{
