--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                         </div>     
                         <br />
                         <div className="viewing">
-                            <form action="http://localhost:3000/seeTasks.html">
+                            <form action="https://kaveeshkhattar.github.io/seeTasks.html">
                                 <button style={{
                                                                         
                                     
